--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="teeth-icon-10.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta
@@ -33,7 +33,7 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <title>Doctor's Portal</title>
+    <title>Dental Clinic</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
